--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Betreuer KI Assistenz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Betreuer KI</title>
   </head>
   <body>
     <div id="root"></div>
